--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
@@ -7,17 +7,15 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="loginPane" prefHeight="615.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="eus.ehu.chismosas.mastodonfx.presentation.AccountSelection">
-   <Label id="chooseText" layoutX="115.0" layoutY="79.0" prefWidth="370.0"
-          text="Choose an account to enter mastodon with" wrapText="true">
+<Pane fx:id="loginPane" prefHeight="615.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eus.ehu.chismosas.mastodonfx.presentation.AccountSelection">
+   <Label id="chooseText" layoutX="115.0" layoutY="79.0" prefWidth="370.0" text="Choose an account to enter mastodon with" wrapText="true">
    </Label>
-   <ListView fx:id="accountsList" layoutX="73.0" layoutY="125.0" prefHeight="294.0" prefWidth="454.0"/>
-   <ImageView id="selectorLogo" fitHeight="30.0" fitWidth="142.0" layoutX="240.0" layoutY="31.0" preserveRatio="true"/>
-   <Button fx:id="chooseAccountBtn" layoutX="446.0" layoutY="542.0" onAction="#chooseAccount" text="Choose account"/>
-   <Button fx:id="AddNewAccountBtn" layoutX="144.0" layoutY="542.0" onAction="#addNewAccount" text="Add new account"/>
-   <Label layoutX="54.0" layoutY="452.0" text="Account ID:"/>
-   <Label layoutX="33.0" layoutY="500.0" text="Account token:"/>
-   <TextField fx:id="newID" layoutX="143.0" layoutY="449.0"/>
-   <TextField fx:id="newToken" layoutX="143.0" layoutY="498.0"/>
+   <ListView id="login-list" fx:id="accountsList" layoutX="73.0" layoutY="125.0" prefHeight="294.0" prefWidth="454.0" />
+   <ImageView id="selectorLogo" fitHeight="30.0" fitWidth="142.0" layoutX="240.0" layoutY="31.0" preserveRatio="true" />
+   <Button fx:id="chooseAccountBtn" layoutX="446.0" layoutY="542.0" onAction="#chooseAccount" styleClass="blueBtn" text="Choose account" />
+   <Button fx:id="AddNewAccountBtn" layoutX="144.0" layoutY="542.0" onAction="#addNewAccount" styleClass="blueBtn" text="Add new account" />
+   <Label layoutX="54.0" layoutY="452.0" text="Account ID:" />
+   <Label layoutX="33.0" layoutY="500.0" text="Account token:" />
+   <TextField fx:id="newID" layoutX="143.0" layoutY="449.0" />
+   <TextField fx:id="newToken" layoutX="143.0" layoutY="498.0" />
 </Pane>
