--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/settings.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/settings.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
@@ -64,17 +65,17 @@
                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                     <Image url="@icons/appearance.png" />
                 </ImageView>
-                <Label text="%Appearance:" textFill="WHITE">
+                <Label text="%Lenguage:" textFill="WHITE">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Label>
             </ToolBar>
-            <Label text="WIP" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-                <font>
-                    <Font size="20.0" />
-                </font>
-            </Label>
+         <ComboBox fx:id="lenguage" onAction="#chooseLenguage" prefHeight="25.0" prefWidth="265.0" promptText="%Choose a lenguage" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+         </ComboBox>
         </GridPane>
     </HBox>
     <HBox prefHeight="183.0" prefWidth="600.0" style="-fx-background-color: #18181b;">
