--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+
 <Pane fx:id="loginPane" prefHeight="615.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eus.ehu.chismosas.mastodonfx.presentation.AccountSelection">
    <Label id="chooseText" layoutX="115.0" layoutY="79.0" prefWidth="370.0" text="Choose an account to enter mastodon with" wrapText="true">
    </Label>
@@ -10,8 +14,8 @@
    <ImageView id="selectorLogo" fitHeight="30.0" fitWidth="142.0" layoutX="240.0" layoutY="31.0" preserveRatio="true" />
    <Button fx:id="chooseAccountBtn" layoutX="446.0" layoutY="542.0" onAction="#chooseAccount" styleClass="blueBtn" text="Choose account" />
    <Button fx:id="AddAccountBtn" layoutX="144.0" layoutY="542.0" onAction="#addAccount" styleClass="blueBtn" text="Add new account" />
-   <Button fx:id="removeAccountBtn" layoutX="446.0" layoutY="527.0" mnemonicParsing="false" onAction="#removeAccount" style="-fx-background-color: #5c4de3;" text="Remove account" textFill="WHITE"/>
+   <Button fx:id="removeAccountBtn" layoutX="444.0" layoutY="498.0" mnemonicParsing="false" onAction="#removeAccount" styleClass="blueBtn" text="Remove account" />
    <Label layoutX="33.0" layoutY="500.0" text="Account token:" />
-   <Label fx:id="tokenStatusLabel" layoutX="144.0" layoutY="499.0" text="token status" textFill="WHITE"/>
+   <Label fx:id="tokenStatusLabel" layoutX="144.0" layoutY="499.0" text="token status" textFill="WHITE" />
    <TextField fx:id="tokenField" layoutX="143.0" layoutY="498.0" />
 </Pane>
