Replaced CSS "selected" id with "selected-button"

--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/styles/dark.css
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/styles/dark.css
@@ -79,7 +79,7 @@
 
 /*STYLES FOR SPECIFIC ITEMS*/
 
-#selected{
+#selected-button{
     -fx-background-color: #6153e6;
     -fx-text-weight: bold;
     -fx-text-fill: #ffffff;
