visual changes vol 1579

--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/styles/dark.css
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/styles/dark.css
@@ -77,6 +77,9 @@
     -fx-border-color:  transparent transparent #ababab transparent;
 }
 
+#login-list .list-cell:selected{
+    -fx-background-color: #9e93fa;
+}
 /*STYLES FOR SPECIFIC ITEMS*/
 
 #selected-button{
