--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
@@ -12,10 +12,10 @@
    </Label>
    <ListView id="login-list" fx:id="accountsList" layoutX="73.0" layoutY="125.0" prefHeight="294.0" prefWidth="454.0" />
    <ImageView id="selectorLogo" fitHeight="30.0" fitWidth="142.0" layoutX="240.0" layoutY="31.0" preserveRatio="true" />
-   <Button fx:id="chooseAccountBtn" layoutX="446.0" layoutY="542.0" onAction="#chooseAccount" styleClass="blueBtn" text="Choose account" />
+   <Button fx:id="chooseAccountBtn" layoutX="446.0" layoutY="498.0" onAction="#chooseAccount" styleClass="blueBtn" text="Choose account" />
    <Button fx:id="AddAccountBtn" layoutX="144.0" layoutY="542.0" onAction="#addAccount" styleClass="blueBtn" text="Add new account" />
-   <Button fx:id="removeAccountBtn" layoutX="444.0" layoutY="498.0" mnemonicParsing="false" onAction="#removeAccount" styleClass="blueBtn" text="Remove account" />
+   <Button fx:id="removeAccountBtn" layoutX="444.0" layoutY="542.0" mnemonicParsing="false" onAction="#removeAccount" styleClass="blueBtn" text="Remove account" />
    <Label layoutX="33.0" layoutY="500.0" text="Account token:" />
    <Label fx:id="tokenStatusLabel" layoutX="144.0" layoutY="499.0" text="token status" textFill="WHITE" />
-   <TextField fx:id="tokenField" layoutX="143.0" layoutY="498.0" />
+   <TextField fx:id="tokenField" layoutX="143.0" layoutY="498.0" promptText="Insert account token" />
 </Pane>
