--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/light.css
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/light.css
@@ -3,6 +3,10 @@
 }
 .label{
     -fx-font-family: "System";
-    -fx-font-size: 14px;
+    -fx-font-size: 30px;
+    -fx-text-fill: #000000;
+}
+.button{
+    -fx-background-color: #f39776;
     -fx-text-fill: #000000;
 }
