--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/main-view.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/main-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -31,7 +32,11 @@
                <Font size="13.0" />
             </font>
          </Button>
-         <ImageView fx:id="recentImage" fitHeight="121.0" fitWidth="178.0" layoutX="19.0" layoutY="214.0" pickOnBounds="true" preserveRatio="true" />
+         <ImageView fx:id="recentImage" fitHeight="121.0" fitWidth="160.0" layoutX="27.0" layoutY="214.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
+            <viewport>
+               <Rectangle2D />
+            </viewport>
+         </ImageView>
       </Pane>
    </right>
    <left>
