--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.Pane?>
 
 <Pane fx:id="loginPane" prefHeight="615.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eus.ehu.chismosas.mastodonfx.presentation.AccountSelection">
-   <Label id="chooseText" layoutX="115.0" layoutY="79.0" prefWidth="370.0" text="%Choose an account to enter mastodon with" wrapText="true">
+   <Label id="chooseText" layoutX="102.0" layoutY="78.0" prefHeight="47.0" prefWidth="444.0" text="%Choose an account to enter mastodon with" wrapText="true">
    </Label>
    <ListView id="login-list" fx:id="accountsList" layoutX="73.0" layoutY="125.0" prefHeight="294.0" prefWidth="454.0" />
-   <ImageView id="selectorLogo" fitHeight="30.0" fitWidth="142.0" layoutX="240.0" layoutY="31.0" preserveRatio="true" />
+   <ImageView id="selectorLogo" fitHeight="142.0" fitWidth="353.0" layoutX="229.0" layoutY="-27.0" preserveRatio="true" />
    <Button fx:id="chooseAccountBtn" layoutX="446.0" layoutY="498.0" onAction="#chooseAccount" styleClass="blueBtn" text="%Choose account" />
-   <Button fx:id="AddAccountBtn" layoutX="194.0" layoutY="542.0" onAction="#addAccount" styleClass="blueBtn" text="%Add new account" />
+   <Button fx:id="AddAccountBtn" layoutX="209.0" layoutY="542.0" onAction="#addAccount" styleClass="blueBtn" text="%Add new account" />
    <Button fx:id="removeAccountBtn" layoutX="444.0" layoutY="542.0" mnemonicParsing="false" onAction="#removeAccount" styleClass="blueBtn" text="%Remove account" />
    <Label layoutX="33.0" layoutY="500.0" text="%Account token:" />
    <Label fx:id="tokenStatusLabel" layoutX="33.0" layoutY="546.0" text="%token status" textFill="WHITE" />
-   <TextField fx:id="tokenField" layoutX="152.0" layoutY="494.0" promptText="%Insert account token" />
+   <TextField fx:id="tokenField" layoutX="178.0" layoutY="496.0" promptText="%Insert account token" />
 </Pane>
